fix scroll and alignment bugs

--- a/components/item/item-list.module.css
+++ b/components/item/item-list.module.css
@@ -40,23 +40,13 @@
 	display: none;
 }
 
-.list {
-	display: flex;
-	gap: 0.75rem;
-	align-items: stretch;
-	overflow-x: auto;
-	scroll-snap-type: x mandatory;
-	scroll-padding: 1rem;
-}
-
 .swiper {
 	width: 100%;
 	padding: 0.75rem 1rem !important;
-	overflow: visible !important;
 }
 
-.swiper > div {
-	overflow: visible !important;
+.swiper > div > div {
+	display: flex;
 }
 
 @media screen and (min-width: 480px) {
